--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 venv
 app/handler/results/
-app/handler/__pycache__/
+app/handler/__pycache__
 app/app.log
 app.log
 app/handler/fetch/hosts/
 app/handler/fetch/id_ed25519
 app/handler/fetch/hosts/ubuntu-test-inventory
+*/__pycache__
